[package]
name = "peng-shop-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peng-shop-backend-zypp = {git = "https://github.com/VortexAcherontic/peng-shop-backend-zypp", optional = true}
peng-shop-backend-snap = {git = "https://github.com/VortexAcherontic/peng-shop-backend-snap", optional = true}
peng-shop-backend-flatpak = {git = "https://github.com/VortexAcherontic/peng-shop-backend-flatpak", optional = true}
peng-shop-backend-dnf = {git = "https://github.com/VortexAcherontic/peng-shop-backend-dnf", optional = true}
peng-shop-backend-yum = {git = "https://github.com/VortexAcherontic/peng-shop-backend-yum", optional = true}
peng-shop-backend-pacman = {git = "https://github.com/VortexAcherontic/peng-shop-backend-pacman", optional = true}
peng-shop-backend-apt = {git = "https://github.com/VortexAcherontic/peng-shop-backend-apt", optional = true}

[features]
zypp = ["dep:peng-shop-backend-zypp"]
apt = ["dep:peng-shop-backend-apt"]
snap = ["dep:peng-shop-backend-snap"]
dnf = ["dep:peng-shop-backend-dnf"]
yum = ["dep:peng-shop-backend-yum"]
pacman = ["dep:peng-shop-backend-pacman"]
flatpak = ["dep:peng-shop-backend-flatpak"]