[package]
name = "peng-shop-backend"
version = "0.1.0"
authors = ["Imo Hester <vortex@z-ray.de>"]
edition = "2021"

[dependencies]
peng-shop-backend-zypp = {git = "https://github.com/VortexAcherontic/peng-shop-backend-zypp", optional = true}
peng-shop-backend-snap = {git = "https://github.com/VortexAcherontic/peng-shop-backend-snap", optional = true}
peng-shop-backend-flatpak = {git = "https://github.com/VortexAcherontic/peng-shop-backend-flatpak", optional = true}
peng-shop-backend-dnf = {git = "https://github.com/VortexAcherontic/peng-shop-backend-dnf", optional = true}
peng-shop-backend-yum = {git = "https://github.com/VortexAcherontic/peng-shop-backend-yum", optional = true}
peng-shop-backend-pacman = {git = "https://github.com/VortexAcherontic/peng-shop-backend-pacman", optional = true}
peng-shop-backend-apt = {git = "https://github.com/VortexAcherontic/peng-shop-backend-apt", optional = true}
peng-shop-backend-aur = {git = "https://github.com/VortexAcherontic/peng-shop-backend-aur", optional = true}
peng-shop-backend-appimage = {git = "https://github.com/VortexAcherontic/peng-shop-backend-appimage", optional = true}
peng-shop-backend-packagekit = {git = "https://github.com/VortexAcherontic/peng-shop-backend-packagekit", optional = true}

[features]
appimage = ["peng-shop-backend-appimage"]
aur = ["dep:peng-shop-backend-aur"]
zypp = ["dep:peng-shop-backend-zypp"]
apt = ["dep:peng-shop-backend-apt"]
snap = ["dep:peng-shop-backend-snap"]
dnf = ["dep:peng-shop-backend-dnf"]
yum = ["dep:peng-shop-backend-yum"]
pacman = ["dep:peng-shop-backend-pacman"]
flatpak = ["dep:peng-shop-backend-flatpak"]
pkgkit = ["dep:peng-shop-backend-packagekit"]